@@ -66,8 +66,7 @@ typedef struct x_inline_picture
 	u_int8_t  line_height ;
 
 	int16_t  next_frame ;
-
-	u_int16_t  ref_count ;
+	u_int16_t  weighting ;
 
 } x_inline_picture_t ;
 
