@@ -1,3 +1,9 @@
+2014-04-10  Araki Ken  <arakiken@users.sf.net>
+
+	* x_picture.[ch]: It is possible to load GIF files asynchronously.
+
+	* MLActivity.java: Minor fixes.
+
 2014-04-09  Araki Ken  <arakiken@users.sf.net>
 
 	* x_event_source.c: update_ime_text() and x_display_idling() are called
